<resources>

    // General
    <string name="app_name" translatable="false">Gamer Collection</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="min" translatable="false">Min</string>
    <string name="max" translatable="false">Max</string>
    <string name="empty_list">The list is empty</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading…</string>

    <string name="new_version_changes">Due to problems with the servers, from now on the app will work just in local mode. Every game you add will be saved just in the app, so if you uninstall it, you will lose all the saved information. Games you already had saved will still be available as long as you do not uninstall the app.</string>

    // Login
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_access">Access</string>
    <string name="login_not_account">Don\'t have an account yet?</string>
    <string name="login_register">Register here!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must have more than 3 characters</string>
    <string name="username_info">This username is only needed for identification purposes and to be able to separate your games from another user\'s ones.\n\nHowever, due to any personal information is stored, if you forget your password you won\'t be able to retrieve it.\n\nIf this happens, contact the app\'s developer, you can find his email in the Google Play Store app\'s card.</string>
    <string name="username_not_exist">Username does not exist</string>
    <string name="wrong_password">Password is wrong</string>

    // Register
    <string name="registration_repeat_password">Repeat password</string>
    <string name="register">Register</string>
    <string name="invalid_repeat_password">Passwords does not match</string>

    // Games
    <string name="games">My Games</string>
    <string name="games_filter_button_title_pending">Pending</string>
    <string name="games_filter_button_title_in_progress">In Progress</string>
    <string name="games_filter_button_title_finished">Finished</string>
    <plurals name="games_number_title">
        <item quantity="one">%s game</item>
        <item quantity="other">%s games</item>
    </plurals>
    <string name="new_game">New</string>

    // Game search
    <string name="game_search">Search</string>
    <string name="load_more">Load more</string>
    <string name="search_games">Search games</string>

    // Game detail
    <string name="game_detail_placeholder_name">Add a name</string>
    <string name="game_detail_image_modal_title">Introduce a valid URL</string>
    <string name="game_detail_platform">Platform</string>
    <string name="game_detail_select_platform">Select a platform</string>
    <string name="game_detail_genre">Genre</string>
    <string name="game_detail_select_genre">Select a genre</string>
    <string name="game_detail_format">Format</string>
    <string name="game_detail_select_format">Select a format</string>
    <string name="game_detail_release_date">Release date</string>
    <string name="game_detail_select_date">Select a date</string>
    <string name="game_detail_button_title_pending">Pending</string>
    <string name="game_detail_button_title_in_progress">In Progress</string>
    <string name="game_detail_button_title_finished">Finished</string>
    <string name="game_detail_title">Details</string>
    <string name="game_detail_distributor">Distributor</string>
    <string name="game_detail_placeholder_distributor">Add a distributor</string>
    <string name="game_detail_developer">Developer</string>
    <string name="game_detail_placeholder_developer">Add a developer</string>
    <string name="game_detail_pegi">Pegi</string>
    <string name="game_detail_select_pegi">Select a category</string>
    <string name="game_detail_players">No. Players</string>
    <string name="game_detail_placeholder_players">Add a no. players</string>
    <string name="game_detail_price">Price</string>
    <string name="game_detail_placeholder_price">Add the price</string>
    <string name="game_detail_purchase_date">Purchase date</string>
    <string name="game_detail_purchase_location">Purchase location</string>
    <string name="game_detail_placeholder_purchase_location">Add a purchase location</string>
    <string name="game_detail_goty">Game of the year (GOTY)</string>
    <string name="game_detail_loaned_to">Loaned to</string>
    <string name="game_detail_placeholder_loaned_to">Add a username</string>
    <string name="game_detail_video_url">Video URL</string>
    <string name="game_detail_placeholder_video_url">Add a URL</string>
    <string name="game_detail_observations">Observations</string>
    <string name="game_detail_placeholder_observations">Add some observations</string>
    <string name="game_detail_saga">Saga</string>
    <string name="game_detail_songs_title">Songs</string>
    <string name="game_detail_delete_confirmation">Are you sure you want to delete this game? This action can\'t be undone</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="game_created">Game added!</string>
    <string name="game_removed">Game removed!</string>
    <string-array name="pegis" translatable="false">
        <item>+3</item>
        <item>+4</item>
        <item>+6</item>
        <item>+7</item>
        <item>+12</item>
        <item>+16</item>
        <item>+18</item>
    </string-array>

    // Sagas
    <string name="sagas">My Sagas</string>
    <plurals name="sagas_number_title" translatable="false">
        <item quantity="one">%d saga</item>
        <item quantity="other">%d sagas</item>
    </plurals>
    <plurals name="saga_title">
        <item quantity="one">%s (%d game)</item>
        <item quantity="other">%s (%d games)</item>
    </plurals>
    <string name="search_sagas">Search sagas</string>

    // Saga detail
    <string name="saga_detail">Detail</string>
    <string name="saga_detail_placeholder_name">Add a name</string>
    <string name="saga_detail_games_title">Games</string>
    <string name="saga_detail_delete_confirmation">Are you sure you want to delete this saga? This action can\'t be undone</string>
    <string name="saga_created">Saga created!</string>
    <string name="saga_removed">Saga removed!</string>

    // Settings
    <string name="settings">Settings</string>
    <string name="app_language">App language</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="games_sorting_parameter">Games sorting parameter</string>
    <string name="swipe_refresh_enabled_title">Enable list refresh</string>
    <string name="app_theme">App theme</string>
    <string-array name="app_theme_values">
        <item>System default</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="import_file">Import videogames</string>
    <string name="export_file">Export videogames</string>
    <string name="import_confirmation">Are you sure you want to IMPORT the data? This process could take a while.</string>
    <string name="export_confirmation">Are you sure you want to EXPORT the data? This process could take a while.</string>
    <string name="file_created">File created</string>
    <string name="data_imported">Data imported correctly</string>
    <string name="profile_logout_confirmation">Are you sure you want to exit?</string>
    <string name="profile_delete_confirmation">Are you sure you want to delete your user? You will lose all your stored information about the videogames</string>

    // Synchronization
    <string name="sync_title">Synchronizing…</string>
    <string name="sync_confirmation">Are you sure you want to sync the app? This process could take a while</string>

    // Modal filter
    <string name="modal_filter_platform">Platform</string>
    <string name="modal_filter_genre">Genre</string>
    <string name="modal_filter_format">Format</string>
    <string name="modal_filter_score">Score</string>
    <string name="modal_filter_release_date">Release date</string>
    <string name="modal_filter_purchase_date">Purchase date</string>
    <string name="modal_filter_price">Price</string>
    <string name="modal_filter_goty">GOTY</string>
    <string name="modal_filter_loaned">Loaned</string>
    <string name="modal_filter_has_saga">Has saga</string>
    <string name="modal_filter_has_songs">Has songs</string>

    // Modal song
    <string name="modal_song_placeholder_name">Add a name</string>
    <string name="modal_song_placeholder_singer">Add a singer</string>
    <string name="modal_song_placeholder_url">Add a link</string>

    // Sort picker
    <string name="sort_title">Order by</string>
    <string-array name="sort_param_keys" translatable="false">
        <item>name</item>
        <item>platform</item>
        <item>releaseDate</item>
        <item>purchaseDate</item>
        <item>price</item>
        <item>score</item>
    </string-array>
    <string-array name="sort_param_values">
        <item>Name</item>
        <item>Platform</item>
        <item>Release date</item>
        <item>Purchase date</item>
        <item>Price</item>
        <item>Score</item>
    </string-array>
    <string-array name="sort_order_keys" translatable="false">
        <item>ascending</item>
        <item>descending</item>
    </string-array>
    <string-array name="sort_order_values">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    // Notifications
    <string name="channel_name">Release notice</string>
    <string name="channel_description">Notice the release day of a pending game</string>
    <string name="notification_title">%s already on sale</string>
    <string name="notification_description">Today, %s, game %s has been released</string>
    <plurals name="summary_notifications_title">
        <item quantity="one">%d new game released</item>
        <item quantity="other">%d new games released</item>
    </plurals>

    // Errors
    <string name="error_server">There was an error on getting data. Please, try again</string>
    <string name="error_server_connection">There was an error on getting data. Please, check your internet connection and try again</string>
</resources>