<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/navigation_games"
        android:icon="@drawable/bottom_navigation_games_images"
        android:title="@string/games"
        />

    <item
        android:id="@+id/navigation_game_search"
        android:icon="@drawable/bottom_navigation_game_search_images"
        android:title="@string/game_search"
        />

    <item
        android:id="@+id/navigation_sagas"
        android:icon="@drawable/bottom_navigation_sagas_images"
        android:title="@string/sagas"
        />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/bottom_navigation_profile_images"
        android:title="@string/profile"
        />

</menu>
