<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linear_layout_state_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <es.upsa.mimo.gamercollection.customviews.StateButton
                        android:id="@+id/button_pending"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:stateButton_background="@drawable/bordered_pending_state_button"
                        app:stateButton_color="@drawable/pending_state_button_bottom_line"
                        app:stateButton_title="@string/game_detail_button_title_pending" />

                    <es.upsa.mimo.gamercollection.customviews.StateButton
                        android:id="@+id/button_in_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        app:stateButton_background="@drawable/bordered_in_progress_state_button"
                        app:stateButton_color="@drawable/in_progress_state_button_bottom_line"
                        app:stateButton_title="@string/game_detail_button_title_in_progress" />

                    <es.upsa.mimo.gamercollection.customviews.StateButton
                        android:id="@+id/button_finished"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:stateButton_background="@drawable/bordered_finished_state_button"
                        app:stateButton_color="@drawable/finished_state_button_bottom_line"
                        app:stateButton_title="@string/game_detail_button_title_finished" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_hidden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:animateLayoutChanges="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_state_buttons">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/game_detail_pegi"
                            app:layout_constraintBottom_toTopOf="@+id/spinner_pegis"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <Spinner
                            android:id="@+id/spinner_pegis"
                            style="@style/CustomSpinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/game_detail_goty"
                            app:layout_constraintBottom_toTopOf="@+id/radio_group_goty"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.0" />

                        <RadioGroup
                            android:id="@+id/radio_group_goty"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent">

                            <RadioButton
                                android:id="@+id/radio_button_no"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:buttonTint="@color/color2"
                                android:checked="true"
                                android:text="@string/no"
                                android:textColor="@color/color2" />

                            <RadioButton
                                android:id="@+id/radio_button_yes"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:buttonTint="@color/color2"
                                android:text="@string/yes"
                                android:textColor="@color/color2" />
                        </RadioGroup>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_layout_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_hidden">

                    <LinearLayout
                        android:id="@+id/linear_layout_genres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_genre" />

                        <Spinner
                            android:id="@+id/spinner_genres"
                            style="@style/CustomSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_release_date" />

                        <EditText
                            android:id="@+id/edit_text_release_date"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_select_date" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/linear_layout_formats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_format" />

                        <Spinner
                            android:id="@+id/spinner_formats"
                            style="@style/CustomSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_distributor" />

                        <EditText
                            android:id="@+id/edit_text_distributor"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_distributor" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_developer" />

                        <EditText
                            android:id="@+id/edit_text_developer"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_developer" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_players" />

                        <EditText
                            android:id="@+id/edit_text_players"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_players" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_price"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_price" />

                        <EditText
                            android:id="@+id/edit_text_price"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_price" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_purchase_date"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_purchase_date" />

                        <EditText
                            android:id="@+id/edit_text_purchase_date"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_select_date" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_purchase_location"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_purchase_location" />

                        <EditText
                            android:id="@+id/edit_text_purchase_location"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_purchase_location" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_loaned"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_loaned_to" />

                        <EditText
                            android:id="@+id/edit_text_loaned"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_loaned_to" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_video_url"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_video_url" />

                        <EditText
                            android:id="@+id/edit_text_video_url"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_video_url" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_observations"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_observations" />

                        <EditText
                            android:id="@+id/edit_text_observations"
                            style="@style/WhiteEditText.GameDetails"
                            android:hint="@string/game_detail_placeholder_observations" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_view_saga"
                            style="@style/WhiteTextView.GameDetails"
                            android:text="@string/game_detail_saga" />

                        <EditText
                            android:id="@+id/edit_text_saga"
                            style="@style/WhiteEditText.GameDetails"
                            android:background="@android:color/transparent"
                            android:inputType="none" />

                    </LinearLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_delete_game"
                    style="@style/RoundedButton.Delete"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear_layout_details" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>