<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_games"
    >

    <fragment
        android:id="@+id/navigation_games"
        android:name="es.upsa.mimo.gamercollection.fragments.GamesFragment"
        android:label="@string/games"
        tools:layout="@layout/fragment_games"
        />

    <fragment
        android:id="@+id/navigation_game_search"
        android:name="es.upsa.mimo.gamercollection.fragments.GameSearchFragment"
        android:label="@string/game_search"
        tools:layout="@layout/fragment_game_search"
        />

    <fragment
        android:id="@+id/navigation_sagas"
        android:name="es.upsa.mimo.gamercollection.fragments.SagasFragment"
        android:label="@string/sagas"
        tools:layout="@layout/fragment_sagas"
        />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="es.upsa.mimo.gamercollection.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"
        />
</navigation>
