<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bordered_view">

    <EditText
        android:id="@+id/edit_text_name"
        style="@style/WhiteEditText.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/modal_song_placeholder_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="1" />

    <EditText
        android:id="@+id/edit_text_singer"
        style="@style/WhiteEditText.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/modal_song_placeholder_singer"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_name"
        app:layout_constraintStart_toStartOf="@+id/edit_text_name"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_name" />

    <EditText
        android:id="@+id/edit_text_url"
        style="@style/WhiteEditText.Regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/modal_song_placeholder_url"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_singer"
        app:layout_constraintStart_toStartOf="@+id/edit_text_singer"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_singer" />

    <Button
        android:id="@+id/button_accept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_url"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>